[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "untils"
version = "1.0.0"
authors = [{name = "BesBobowyy"}]
description = "Light-weight library for console games or small utils to process user input as commands and describe structure with config."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]
docs = ["mkdocs>=1.6.0", "mkdocs-material"]

[tool.pytest]
minversion = "9.0"
addopts = ["-v"]
testpaths = [
    "tests",
]

[project.urls]
GitHub = "https://github.com/BesBobowyy/untils"